--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -19,7 +19,11 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "typeRoots": [
+      "./src/defined"
+    ]
   },
-  "include": ["vite.config.ts", "eslint.config.ts"]
+  "include": ["vite.config.ts", "eslint.config.ts", "src/defined/**/*.d.ts"]
 }
