--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.5.2",
+    "@layui/layer-vue": "^2.4.8",
     "@tailwindcss/vite": "^4.1.13",
     "@vicons/tabler": "^0.13.0",
     "eslint": "^9.35.0",
