--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "lint": "eslint . --ext .ts,.vue --fix"
   },
   "dependencies": {
-    "@imengyu/vue3-context-menu": "^1.5.2",
     "@layui/layer-vue": "^2.4.8",
     "@tailwindcss/vite": "^4.1.13",
+    "@vicons/fluent": "^0.13.0",
     "@vicons/tabler": "^0.13.0",
     "eslint": "^9.35.0",
     "pinia": "^3.0.3",
