--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "naive-ui": "^2.42.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
+    "unplugin-auto-import": "^20.1.0",
+    "unplugin-vue-components": "^29.1.0",
     "vfonts": "^0.0.3",
     "vite": "^7.1.2",
     "vue-tsc": "^3.0.5"
