fix(tsconfig) : add defined script to tsconfig including

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,7 @@
     "src/**/*.ts", 
     "src/**/*.tsx", 
     "src/**/*.vue",
-    "src/defined/**/*.d.ts"
+    "src/defined/**/*.d.ts",
+    "*.d.ts"
   ]
 }
