--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:prod": "vite --host 0.0.0.0 --port 92 --mode production",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .ts,.vue --fix"
+    "lint": "eslint . --ext .ts,.vue --fix",
+    "mock-build": "vue-tsc -b && vite build"
   },
   "dependencies": {
     "@layui/layer-vue": "^2.4.8",
