--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@tailwindcss/vite": "^4.1.13",
     "@vicons/fluent": "^0.13.0",
     "@vicons/tabler": "^0.13.0",
+    "echarts": "^6.0.0",
     "eslint": "^9.35.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate-2": "^2.0.31",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.18",
+    "vue-echarts": "^8.0.0",
     "vue-router": "^4"
   },
   "devDependencies": {
